fix(size-controls): fix vertical-alignment of px-label

--- a/src/modules/app/app.css
+++ b/src/modules/app/app.css
@@ -30,7 +30,7 @@ app {
 }
 
 .app-header .button {
-    width: 2.625rem;
+    width: 2.5rem;
     padding: 0;
 }
 
