--- a/src/modules/info-panel/info-panel.css
+++ b/src/modules/info-panel/info-panel.css
@@ -31,7 +31,7 @@ info-panel {
 }
 
 .info-panel-control .button {
-    width: 2.625rem;
+    width: 2.5rem;
     float: left;
     padding: 0;
 }
